--- a/.prettierrc
+++ b/.prettierrc
@@ -2,5 +2,6 @@
     "printWidth": 100,
     "tabWidth": 4,
     "trailingComma": "all",
-    "useTabs": false
+    "useTabs": false,
+    "endOfLine": "crlf"
 }
